# nixos-config

./: .editorconfig  .gitignore  Readme.md  flake.nix  social-blocking.txt
direnvs/rust/: flake.nix
home-manager/: .sops.yaml  Xcompose  alacritty-theme.nix  config.nu  emacs-extraconf.emacs  emacs.el  emacs.nix  home.nix  hyprland.nix  starship.toml
home-manager/hyprland/: default.nix  dynamic-borders.nix  hypridle.nix  hyprlock.nix  hyprpanel.nix  hyprpaper.nix  hyprsunset.nix  sort_workspaces.nu  toggle_dark.nu  wayle.nix
home-manager/hyprland/gtk/: default.nix
home-manager/hyprland/hyprpanel/: theme.json
home-manager/hyprland/rofi/: default.nix  theme.rasi
home-manager/hyprland/scripts/: launch_waybar
home-manager/hyprland/waybar/: config.json  default.nix  style.css  theme.css
home-manager/modules/: gnome.nix  helix.nix  hyprshell.nix  keybings.json  kitty.nix  vscode.nix
home-manager/modules/anyrun/: mod.nix
home-manager/modules/anyrun/gh/: Cargo.toml  default.nix  flake.nix
home-manager/modules/anyrun/gh/src/: lib.rs
home-manager/modules/emacs/: emacs.el  emacs.nix
home-manager/modules/helix/: blame.nix  kitty256.toml
home-manager/modules/kitty/: dark-theme.conf  light-theme.conf  search.py
home-manager/p10k-config/: p10k.zsh
home-manager/secrets/: secret.yaml
hosts/desktop/: default.nix  hardware-configuration.nix  home-manager.nix
hosts/laptop/: default.nix  hardware-configuration.nix  home-manager.nix
nixos/: configuration.nix  desktop.nix  laptop.nix  vpn.nix
overlays/: default.nix
pkgs/: default.nix
(+16 files in other folders)
