[package]
name = "gh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
anyrun-plugin = { git = "https://github.com/anyrun-org/anyrun" }
abi_stable = "0.11.1"
urlencoding = "2.1.3"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.1"
